--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "@libp2p/interfaces": "^3.3.1",
     "@libp2p/logger": "^2.0.7",
     "@libp2p/peer-id": "^2.0.3",
+    "@multiformats/multiaddr": "^12.1.2",
     "any-signal": "^4.1.1",
     "browser-readablestream-to-it": "^2.0.2",
     "iterable-ndjson": "^1.1.0",
