--- a/package.json
+++ b/package.json
@@ -137,22 +137,27 @@
   },
   "dependencies": {
     "@libp2p/interface-content-routing": "^2.0.2",
+    "@libp2p/interface-peer-id": "^2.0.2",
     "@libp2p/interface-peer-info": "^1.0.9",
+    "@libp2p/interface-peer-store": "^2.0.3",
     "@libp2p/interfaces": "^3.3.1",
     "@libp2p/logger": "^2.0.7",
     "@libp2p/peer-id": "^2.0.3",
     "@multiformats/multiaddr": "^12.1.2",
     "any-signal": "^4.1.1",
     "browser-readablestream-to-it": "^2.0.2",
+    "D": "^1.0.0",
     "iterable-ndjson": "^1.1.0",
     "multiformats": "^11.0.2",
     "p-defer": "^4.0.0",
-    "p-queue": "^7.3.4"
+    "p-queue": "^7.3.4",
+    "sinon-ts": "^1.0.0"
   },
   "devDependencies": {
     "@libp2p/peer-id-factory": "^2.0.3",
     "aegir": "^39.0.7",
     "body-parser": "^1.20.2",
-    "it-all": "^3.0.1"
+    "it-all": "^3.0.1",
+    "it-drain": "^3.0.2"
   }
 }
