--- a/package.json
+++ b/package.json
@@ -136,21 +136,19 @@
     "docs": "aegir docs"
   },
   "dependencies": {
-    "@libp2p/interface-content-routing": "^2.0.2",
-    "@libp2p/interface-peer-info": "^1.0.9",
-    "@libp2p/interfaces": "^3.3.1",
-    "@libp2p/logger": "^2.0.7",
-    "@libp2p/peer-id": "^2.0.3",
+    "@libp2p/interface": "^0.1.1",
+    "@libp2p/logger": "^3.0.1",
+    "@libp2p/peer-id": "^3.0.1",
     "@multiformats/multiaddr": "^12.1.2",
     "any-signal": "^4.1.1",
     "browser-readablestream-to-it": "^2.0.2",
     "iterable-ndjson": "^1.1.0",
-    "multiformats": "^11.0.2",
+    "multiformats": "^12.0.1",
     "p-defer": "^4.0.0",
     "p-queue": "^7.3.4"
   },
   "devDependencies": {
-    "@libp2p/peer-id-factory": "^2.0.3",
+    "@libp2p/peer-id-factory": "^3.0.2",
     "aegir": "^40.0.8",
     "body-parser": "^1.20.2",
     "it-all": "^3.0.1"
