chore: update project

--- a/package.json
+++ b/package.json
@@ -11,10 +11,6 @@
   "bugs": {
     "url": "https://github.com/libp2p/js-ipni-content-routing/issues"
   },
-  "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=7.0.0"
-  },
   "type": "module",
   "types": "./dist/src/index.d.ts",
   "files": [
@@ -32,6 +28,7 @@
   "eslintConfig": {
     "extends": "ipfs",
     "parserOptions": {
+      "project": true,
       "sourceType": "module"
     }
   },
